--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           class="play__pause__button"
           id="play__button"
           onclick="playPause()"
+          disabled="true"
         >
           <i class="fa-solid fa-play"></i>
         </button>
