--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Mastering for Gulch Goblins" />
-    <meta name="keywords" content="mastering, experimental, ambient, noise" />
+    <meta name="keywords" content="mastering, experimental, ambient, electronic" />
     <meta name="author" content="Ashton Klassen" />
     <title>Ashton Klassen | Mastering</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
@@ -69,8 +69,8 @@
     </div>
     <script src="./js/ab-player.js"></script>
     <footer>
-      <a class="nav" href="https://www.instagram.com/arbor_acoustics/">follow?</a>
-      <a class="nav" href="mailto:ashton.richard.klassen@gmail.com">contact?</a>
+      <a class="nav" target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/ashtonklassn/">follow?</a>
+      <a class="nav" target="_blank" rel="noopener noreferrer" href="mailto:ashton.richard.klassen@gmail.com">contact?</a>
     </footer>
   </body>
 </html>
