--- a/index.html
+++ b/index.html
@@ -9,21 +9,19 @@
     <meta name="author" content="Ashton Klassen" />
     <title>Ashton Klassen | Mastering</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css" /> 
   </head>
 
   <body>
     <header>
-      <div class="container">
-        <img id="logo" src="images/logo.png " alt="AK Mastering for Gulch Goblins">
-    </div>
+      <img src="images/logo.png" />
+      <h1>Mastering for Gulch Goblins</h1>
     </header>
     <div class="player__wrapper">
-        <div id="title"></div>
-        <div id="artist"></div>
+      <div id="title"></div>
+      <div id="artist"></div>
       <div class="progress__container" id="progress">
         <div class="progress__bar" id="progress__fill"></div>
       </div>
@@ -68,6 +66,15 @@
       </div>
     </div>
     <script src="./js/ab-player.js"></script>
+    <div class="work">
+      <h1>Work</h1>     
+      <div><a target="_blank" rel="noopener noreferrer" href="https://s-wurm.bandcamp.com/album/songs-of-low-heaven">S. Wurm. <i>Songs of Low Heaven,</i> Elder Wall, 2022</a></div>
+      <div><a target="_blank" rel="noopener noreferrer" href="https://elderwall.bandcamp.com/album/the-gods-sprinkled-daisies-onto-the-earth">Layia. <i>"The Gods Sprinkled Daisies Onto the Earth,"</i> Elder Wall, 2022</a></div>      
+      <div><a target="_blank" rel="noopener noreferrer" href="https://elderwall.bandcamp.com/album/albright-turbine">Levitating Mausoleum. <i>Albright Turbine,</i> Elder Wall, 2022</a></div>      
+      <div><a target="_blank" rel="noopener noreferrer" href="https://elderwall.bandcamp.com/album/long-face">Rue Morgan. <i>Long Face,</i> Elder Wall, 2022</a></div>  
+      <div><a target="_blank" rel="noopener noreferrer" href="https://elderwall.bandcamp.com/album/gods-love">S. Wurm. <i>God's Love,</i> Elder Wall, 2021</a></div>  
+    </div>
+
     <footer>
       <a class="nav" target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/ashtonklassn/">follow?</a>
       <a class="nav" target="_blank" rel="noopener noreferrer" href="mailto:ashton.richard.klassen@gmail.com">contact?</a>
